fix: chart overflow

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -103,3 +103,8 @@ body {
     padding: 10px;
   }
 }
+
+//chart
+.chartWrapper {
+  overflow-x: auto;
+}
